crates/parse/src/tests/snapshots/array_index_2.snap
---
source: crates/parse/src/tests.rs
assertion_line: 296
expression: "(test[1], ast, ast_string)"
---
- "x[1 + 2]"
- Ok:
    nodes:
      - kind:
          Index:
            array:
              kind:
                Ident:
                  name: x
                  ty: ~
            idx:
              kind:
                BinOp:
                  op: Add
                  lhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 1
                        ty: ~
                  rhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 2
                        ty: ~
                  ty: ~
            ty: ~
- "x[(+ 1 2)]"

