crates/parse/src/tests/snapshots/array_index_3.snap
---
source: crates/parse/src/tests.rs
assertion_line: 296
expression: "(test[1], ast, ast_string)"
---
- "x[y[0]]"
- Ok:
    nodes:
      - kind:
          Index:
            array:
              kind:
                Ident:
                  name: x
                  ty: ~
            idx:
              kind:
                Index:
                  array:
                    kind:
                      Ident:
                        name: y
                        ty: ~
                  idx:
                    kind:
                      Lit:
                        value:
                          UInt64: 0
                        ty: ~
                  ty: ~
            ty: ~
- "x[y[0]]"

