crates/parse/src/tests/snapshots/array_index_chain.snap
---
source: crates/parse/src/tests.rs
assertion_line: 294
expression: "(test[1], ast, ast_string)"
---
- "x[0][1]"
- Ok:
    nodes:
      - kind:
          Index:
            binding:
              kind:
                Index:
                  binding:
                    kind:
                      Ident:
                        name: x
                        ty: ~
                  idx:
                    kind:
                      Lit:
                        value:
                          UInt64: 0
                        ty: ~
                  ty: ~
            idx:
              kind:
                Lit:
                  value:
                    UInt64: 1
                  ty: ~
            ty: ~
- "x[0][1]"

