crates/parse/src/tests/snapshots/array_lit.snap
---
source: crates/parse/src/tests.rs
assertion_line: 293
expression: "(test[1], ast, ast_string)"
---
- "let x: [int; 3] = [1, 2, 3]"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn:
              SArray:
                - Int32
                - 3
            init:
              kind:
                Lit:
                  value:
                    Array:
                      elements:
                        - kind:
                            Lit:
                              value:
                                UInt64: 1
                              ty: ~
                        - kind:
                            Lit:
                              value:
                                UInt64: 2
                              ty: ~
                        - kind:
                            Lit:
                              value:
                                UInt64: 3
                              ty: ~
                      inner_ty: ~
                  ty: ~
- "(let x:sarray(int32, 3) [ 1 2 3])"

