crates/parse/src/tests/snapshots/binop_basic_var.snap
---
source: crates/parse/src/tests.rs
assertion_line: 47
expression: "(test[1], ast, ast_string)"
---
- 19 + a + 40
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Add
            lhs:
              kind:
                BinOp:
                  op: Add
                  lhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 19
                        ty: ~
                  rhs:
                    kind:
                      Ident:
                        name: a
                        ty: ~
                  ty: ~
            rhs:
              kind:
                Lit:
                  value:
                    UInt64: 40
                  ty: ~
            ty: ~
- (+ (+ 19 a) 40)

