crates/parse/src/tests/snapshots/block_empty.snap
---
source: crates/parse/src/tests.rs
assertion_line: 60
expression: "(test[1], ast, ast_string)"
---
- "if foo {}"
- Ok:
    nodes:
      - kind:
          Cond:
            cond_expr:
              kind:
                Ident:
                  name: foo
                  ty: ~
            then_block:
              kind:
                Block:
                  list: []
                  ty: ~
            else_block: ~
            ty: ~
- "(if foo '()))"

