crates/parse/src/tests/snapshots/block_let.snap
---
source: crates/parse/src/tests.rs
assertion_line: 60
expression: "(test[1], ast, ast_string)"
---
- "let x: int = { 1 }"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn: Int32
            init:
              kind:
                Block:
                  list:
                    - kind:
                        Lit:
                          value:
                            UInt64: 1
                          ty: ~
                  ty: ~
- "(let x:int32 '(1))"

