crates/parse/src/tests/snapshots/block_multi.snap
---
source: crates/parse/src/tests.rs
assertion_line: 60
expression: "(test[1], ast, ast_string)"
---
- "y = { 1 + 4; foo(); 4 / 2 }"
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Assign
            lhs:
              kind:
                Ident:
                  name: y
                  ty: ~
            rhs:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              Lit:
                                value:
                                  UInt64: 1
                                ty: ~
                          rhs:
                            kind:
                              Lit:
                                value:
                                  UInt64: 4
                                ty: ~
                          ty: ~
                    - kind:
                        Call:
                          name: foo
                          args: []
                          ty: ~
                    - kind:
                        BinOp:
                          op: Div
                          lhs:
                            kind:
                              Lit:
                                value:
                                  UInt64: 4
                                ty: ~
                          rhs:
                            kind:
                              Lit:
                                value:
                                  UInt64: 2
                                ty: ~
                          ty: ~
                  ty: ~
            ty: ~
- "(= y '((+ 1 4) (foo) (/ 4 2)))"

